[gd_scene load_steps=4 format=3 uid="uid://c32s8i4orrlrx"]

[ext_resource type="Script" path="res://MainScreenMenus/MainScreenScripts/CaseSelectScreen.gd" id="1_mmd3t"]
[ext_resource type="Theme" uid="uid://2u7lnkn35v0c" path="res://GlobalTheme.tres" id="1_y4jaw"]

[sub_resource type="LabelSettings" id="LabelSettings_ko4pb"]
font_size = 30

[node name="CaseSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 773.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_y4jaw")
script = ExtResource("1_mmd3t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 1912.0
offset_bottom = 1072.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 32.0
offset_right = 132.0
offset_bottom = 88.0
text = "<"

[node name="LevelOne" type="Button" parent="."]
layout_mode = 0
offset_left = 942.0
offset_top = 156.0
offset_right = 1115.0
offset_bottom = 242.0
text = "Cookie Jar Case"

[node name="LevelTwo" type="Button" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 370.0
offset_right = 471.0
offset_bottom = 445.0
text = "Love Triangle"

[node name="LevelThree" type="Button" parent="."]
layout_mode = 0
offset_left = 699.0
offset_top = 357.0
offset_right = 881.0
offset_bottom = 441.0
text = "Shocking Conclusion"

[node name="LevelFour" type="Button" parent="."]
layout_mode = 0
offset_left = 1167.0
offset_top = 362.0
offset_right = 1361.0
offset_bottom = 435.0
text = "Dirty Laundry"

[node name="LevelFive" type="Button" parent="."]
layout_mode = 0
offset_left = 1571.0
offset_top = 371.0
offset_right = 1744.0
offset_bottom = 447.0
text = "Famous Forever"

[node name="LevelSix" type="Button" parent="."]
layout_mode = 0
offset_left = 289.0
offset_top = 612.0
offset_right = 461.0
offset_bottom = 694.0
text = "Final Apparrel"

[node name="LevelSeven" type="Button" parent="."]
layout_mode = 0
offset_left = 693.0
offset_top = 612.0
offset_right = 873.0
offset_bottom = 692.0
text = "Black and White"

[node name="LevelEight" type="Button" parent="."]
layout_mode = 0
offset_left = 1163.0
offset_top = 610.0
offset_right = 1342.0
offset_bottom = 700.0
text = "Killer Recipe"

[node name="LevelNine" type="Button" parent="."]
layout_mode = 0
offset_left = 1558.0
offset_top = 624.0
offset_right = 1741.0
offset_bottom = 713.0
text = "Artificial Foolishness
"

[node name="LevelTen" type="Button" parent="."]
layout_mode = 0
offset_left = 1555.0
offset_top = 864.0
offset_right = 1737.0
offset_bottom = 955.0
text = "Man Above"

[node name="LevelEleven" type="Button" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 860.0
offset_right = 456.0
offset_bottom = 943.0
text = "Headlines"

[node name="LevelTwelve" type="Button" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 877.0
offset_right = 882.0
offset_bottom = 963.0
text = "Living Legend"

[node name="LevelThirteen" type="Button" parent="."]
layout_mode = 0
offset_left = 1147.0
offset_top = 869.0
offset_right = 1331.0
offset_bottom = 952.0
text = "Tick Tock"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 943.0
offset_top = 83.0
offset_right = 1119.0
offset_bottom = 146.0
text = "Tutorial"
label_settings = SubResource("LabelSettings_ko4pb")
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelOne" to="." method="_on_level_one_pressed"]
[connection signal="pressed" from="LevelTwo" to="." method="_on_level_two_pressed"]
[connection signal="pressed" from="LevelThree" to="." method="_on_level_three_pressed"]
[connection signal="pressed" from="LevelFour" to="." method="_on_level_four_pressed"]
[connection signal="pressed" from="LevelFive" to="." method="_on_level_five_pressed"]
[connection signal="pressed" from="LevelSix" to="." method="_on_level_six_pressed"]
[connection signal="pressed" from="LevelSeven" to="." method="_on_level_seven_pressed"]
[connection signal="pressed" from="LevelEight" to="." method="_on_level_eight_pressed"]
[connection signal="pressed" from="LevelNine" to="." method="_on_level_nine_pressed"]
[connection signal="pressed" from="LevelTen" to="." method="_on_level_ten_pressed"]
[connection signal="pressed" from="LevelEleven" to="." method="_on_level_eleven_pressed"]
[connection signal="pressed" from="LevelTwelve" to="." method="_on_level_twelve_pressed"]
[connection signal="pressed" from="LevelThirteen" to="." method="_on_level_thirteen_pressed"]
